--- a/entregas/tp4_finite_elements.ipynb
+++ b/entregas/tp4_finite_elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c702632c",
+   "id": "0d527609",
    "metadata": {},
    "source": [
     "# <center>Trabajo práctico N°4</center>\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "ca9ab09e",
    "metadata": {},
    "outputs": [
@@ -90,21 +90,22 @@
        "simpson_rule_f (generic function with 1 method)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "function simpson_rule_f(i, fun, h; method=\"linear\")\n",
-    "    return fun(h*(i-1) + h/2) * (h/2)\n",
-    "#     if method == \"linear\"\n",
-    "#         return fun(h*(i-1) + h/2) * (h/2)\n",
-    "#     elseif method == \"quad\"\n",
-    "#         return fun(h*(i-1)/2) * (h/6)\n",
-    "#     else\n",
-    "#         error(\"Invalid method. Either linear or quad, instead got $method\")\n",
-    "#     end\n",
+    "    \n",
+    "    if method == \"linear\"\n",
+    "        rv = fun(h*(i-1) + h/2) * (h/2)\n",
+    "    elseif method == \"quad\"\n",
+    "        rv = fun(h*(i-1)/2) * (h/6) * (1+3*(ind-2)*(ind-1)/2)\n",
+    "    else\n",
+    "        error(\"Invalid method. Either linear or quad, instead got $method\")\n",
+    "    end\n",
+    "    return rv\n",
     "end"
    ]
   },
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "id": "c3cccd09",
    "metadata": {
     "scrolled": true
@@ -151,7 +152,7 @@
        "finite_elements (generic function with 1 method)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,16 +178,15 @@
     "        i1, i2 = nodes_ix[1], nodes_ix[2]\n",
     "        global_matrix[i1:i2, i1:i2] = global_matrix[i1:i2, i1:i2] + local_matrix\n",
     "        \n",
-    "        # right-hand side\n",
-    "        F[i1:i2] = F[i1:i2] .+ right_hand_side(fun, ϕ, total_nodes, h)[i]\n",
-    "#         if method == \"linear\"\n",
-    "#             aux = right_hand_side(fun, ϕ, total_nodes, h)[i]\n",
-    "#         elseif method == \"quad\"\n",
-    "#             aux = right_hand_side(fun, ϕ, total_nodes, h)[i1:i2]\n",
-    "#         F[i1:i2] = F[i1:i2] .+ aux\n",
-    "#         else\n",
-    "#             error(\"Invalid method. Either linear or quad, instead got $method\")\n",
-    "#         end\n",
+    "        if method == \"linear\"\n",
+    "            aux = right_hand_side(fun, ϕ, total_nodes, h)[i]\n",
+    "        elseif method == \"quad\"\n",
+    "            aux = right_hand_side(fun, ϕ, total_nodes, h)[i1:i2]\n",
+    "        else\n",
+    "            error(\"Invalid method. Either linear or quad, instead got $method\")\n",
+    "        end\n",
+    "\n",
+    "        F[i1:i2] = F[i1:i2] .+ aux\n",
     "    end\n",
     "    \n",
     "    F[1], F[end] = 0, 0\n",
@@ -207,8 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "11b7ca8b",
+   "execution_count": 35,
+   "id": "0440f953",
    "metadata": {
     "scrolled": true
    },
@@ -217,10 +217,10 @@
      "data": {
       "text/plain": [
        "1×2 Matrix{Function}:\n",
-       " #69  #71"
+       " #120  #122"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,8 +237,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "5e4ff812",
+   "execution_count": 36,
+   "id": "3fbc871b",
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
        }
       },
       "text/html": [
-       "    <div id=\"e4d8a1da-8131-48ff-9493-e601fb657fc5\" style=\"width:600px;height:400px;\"></div>\n",
+       "    <div id=\"931ddae4-f589-4e5e-9175-d4f6c4dc0fe0\" style=\"width:600px;height:400px;\"></div>\n",
        "    <script>\n",
        "        requirejs.config({\n",
        "        paths: {\n",
@@ -888,7 +888,7 @@
        "    });\n",
        "    require(['Plotly'], function (Plotly) {\n",
        "\n",
-       "        var PLOT = document.getElementById('e4d8a1da-8131-48ff-9493-e601fb657fc5');\n",
+       "        var PLOT = document.getElementById('931ddae4-f589-4e5e-9175-d4f6c4dc0fe0');\n",
        "    Plotly.plot(PLOT, [\n",
        "    {\n",
        "        \"xaxis\": \"x\",\n",
@@ -1528,7 +1528,7 @@
        "    </script>\n"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1562,7 +1562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67435af5",
+   "id": "7f1c6276",
    "metadata": {},
    "outputs": [],
    "source": []
