--- a/entregas/tp4_finite_elements.ipynb
+++ b/entregas/tp4_finite_elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0d527609",
+   "id": "d41f248e",
    "metadata": {},
    "source": [
     "# <center>Trabajo práctico N°4</center>\n",
@@ -80,28 +80,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "id": "ca9ab09e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "simpson_rule_f (generic function with 1 method)"
+       "simpson_rule_f (generic function with 2 methods)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function simpson_rule_f(i, fun, h; method=\"linear\")\n",
+    "function simpson_rule_f(i, fun, h, nodes_by_element; method=\"linear\")\n",
     "    \n",
     "    if method == \"linear\"\n",
     "        rv = fun(h*(i-1) + h/2) * (h/2)\n",
     "    elseif method == \"quad\"\n",
-    "        rv = fun(h*(i-1)/2) * (h/6) * (1+3*(ind-2)*(ind-1)/2)\n",
+    "        ix = Int(i%nodes_by_element) + 1\n",
+    "        rv = fun(h*(i-1)/2) * (h/6) * (1+3*(ix-2)*(ix-1)/2)\n",
     "    else\n",
     "        error(\"Invalid method. Either linear or quad, instead got $method\")\n",
     "    end\n",
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "id": "c435ac2e",
    "metadata": {
     "scrolled": true
@@ -120,19 +121,19 @@
     {
      "data": {
       "text/plain": [
-       "right_hand_side (generic function with 1 method)"
+       "right_hand_side (generic function with 2 methods)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function right_hand_side(fun, ϕ, total_nodes, h)\n",
+    "function right_hand_side(fun, ϕ, total_nodes, h, nodes_by_element)\n",
     "    rv = Array{Float64}(undef, total_nodes)\n",
     "    for j in 1:total_nodes\n",
-    "        rv[j] = simpson_rule_f(j, fun, h)\n",
+    "        rv[j] = simpson_rule_f(j, fun, h, nodes_by_element)\n",
     "    end\n",
     "    return rv\n",
     "end"
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "id": "c3cccd09",
    "metadata": {
     "scrolled": true
@@ -152,7 +153,7 @@
        "finite_elements (generic function with 1 method)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +182,7 @@
     "        if method == \"linear\"\n",
     "            aux = right_hand_side(fun, ϕ, total_nodes, h)[i]\n",
     "        elseif method == \"quad\"\n",
-    "            aux = right_hand_side(fun, ϕ, total_nodes, h)[i1:i2]\n",
+    "            aux = right_hand_side(fun, ϕ, total_nodes, h, nodes_by_element)[i1:i2]\n",
     "        else\n",
     "            error(\"Invalid method. Either linear or quad, instead got $method\")\n",
     "        end\n",
@@ -207,8 +208,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "0440f953",
+   "execution_count": 64,
+   "id": "961e3a14",
    "metadata": {
     "scrolled": true
    },
@@ -217,10 +218,10 @@
      "data": {
       "text/plain": [
        "1×2 Matrix{Function}:\n",
-       " #120  #122"
+       " #255  #257"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,9 +238,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "3fbc871b",
-   "metadata": {},
+   "execution_count": 65,
+   "id": "1709fd87",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -879,7 +882,7 @@
        }
       },
       "text/html": [
-       "    <div id=\"931ddae4-f589-4e5e-9175-d4f6c4dc0fe0\" style=\"width:600px;height:400px;\"></div>\n",
+       "    <div id=\"68357432-92a1-45ba-9253-b0b9626feef1\" style=\"width:600px;height:400px;\"></div>\n",
        "    <script>\n",
        "        requirejs.config({\n",
        "        paths: {\n",
@@ -888,7 +891,7 @@
        "    });\n",
        "    require(['Plotly'], function (Plotly) {\n",
        "\n",
-       "        var PLOT = document.getElementById('931ddae4-f589-4e5e-9175-d4f6c4dc0fe0');\n",
+       "        var PLOT = document.getElementById('68357432-92a1-45ba-9253-b0b9626feef1');\n",
        "    Plotly.plot(PLOT, [\n",
        "    {\n",
        "        \"xaxis\": \"x\",\n",
@@ -1528,7 +1531,7 @@
        "    </script>\n"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1560,9 +1563,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4f43fc08",
+   "metadata": {},
+   "source": [
+    "# quad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "fe8e2253",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1×3 Matrix{Function}:\n",
+       " #273  #275  #277"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quad_ϕ_1 = x ->2*(x-(1/2))*(x-1)\n",
+    "quad_ϕ_2 = x ->-4*x*(x-1)\n",
+    "quad_ϕ_3 = x ->2*x*(x-(1/2))\n",
+    "quad_ϕ = [quad_ϕ_1 quad_ϕ_2 quad_ϕ_3]\n",
+    "\n",
+    "quad_ϕ_prime_1 = x -> 2*(x-1)+ 2*(x-(1/2))\n",
+    "quad_ϕ_prime_2 = x -> -4*x-4*(x-1)\n",
+    "quad_ϕ_prime_3 = x -> 2*x + 2*(x-(1/2))\n",
+    "\n",
+    "quad_ϕ_prime = [quad_ϕ_prime_1 quad_ϕ_prime_2 quad_ϕ_prime_3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "c67f6062",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "DimensionMismatch(\"dimensions must match: a has dims (Base.OneTo(2), Base.OneTo(2)), b has dims (Base.OneTo(3), Base.OneTo(3)), mismatch at 1\")",
+     "output_type": "error",
+     "traceback": [
+      "DimensionMismatch(\"dimensions must match: a has dims (Base.OneTo(2), Base.OneTo(2)), b has dims (Base.OneTo(3), Base.OneTo(3)), mismatch at 1\")",
+      "",
+      "Stacktrace:",
+      " [1] promote_shape",
+      "   @ ./indices.jl:178 [inlined]",
+      " [2] promote_shape(a::Matrix{Float64}, b::Matrix{Float64})",
+      "   @ Base ./indices.jl:169",
+      " [3] +(A::Matrix{Float64}, Bs::Matrix{Float64})",
+      "   @ Base ./arraymath.jl:45",
+      " [4] finite_elements(nelem::Int64, fun::Function, ϕ::Matrix{Function}, ϕ_prime::Matrix{Function}; method::String)",
+      "   @ Main ./In[63]:19",
+      " [5] top-level scope",
+      "   @ In[67]:1",
+      " [6] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [7] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1116"
+     ]
+    }
+   ],
+   "source": [
+    "_u = finite_elements(UNAA_COSA, x->1, quad_ϕ, quad_ϕ_prime; method=\"quad\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f1c6276",
+   "id": "057a602b",
    "metadata": {},
    "outputs": [],
    "source": []
