fix quadratic mx size

--- a/entregas/tp4_finite_elements.ipynb
+++ b/entregas/tp4_finite_elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d41f248e",
+   "id": "271a4867",
    "metadata": {},
    "source": [
     "# <center>Trabajo práctico N°4</center>\n",
@@ -100,11 +100,9 @@
     "    \n",
     "    if method == \"linear\"\n",
     "        rv = fun(h*(i-1) + h/2) * (h/2)\n",
-    "    elseif method == \"quad\"\n",
+    "    else\n",
     "        ix = Int(i%nodes_by_element) + 1\n",
     "        rv = fun(h*(i-1)/2) * (h/6) * (1+3*(ix-2)*(ix-1)/2)\n",
-    "    else\n",
-    "        error(\"Invalid method. Either linear or quad, instead got $method\")\n",
     "    end\n",
     "    return rv\n",
     "end"
@@ -141,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 85,
    "id": "c3cccd09",
    "metadata": {
     "scrolled": true
@@ -153,7 +151,7 @@
        "finite_elements (generic function with 1 method)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,6 +161,7 @@
     "    @assert (method in [\"linear\", \"quad\"])\n",
     "    h = 1/nelem\n",
     "    nodes_by_element = size(ϕ)[2]\n",
+    "    total_nodes = nelem*(nodes_by_element-1) + 1\n",
     "    \n",
     "    # local matrix\n",
     "    local_matrix = zeros(nodes_by_element, nodes_by_element)\n",
@@ -171,9 +170,14 @@
     "    end\n",
     "\n",
     "    # global matrix\n",
-    "    F = zeros(nelem + 1)\n",
-    "    total_nodes = nelem*(nodes_by_element-1) + 1\n",
-    "    global_matrix = zeros(nelem + 1, nelem + 1)\n",
+    "    if method == \"linear\"\n",
+    "        size = nelem + 1\n",
+    "    else\n",
+    "        size = total_nodes\n",
+    "    end\n",
+    "\n",
+    "    global_matrix = zeros(size, size)\n",
+    "    F = zeros(size)\n",
     "    for i in 1:nelem\n",
     "        nodes_ix = get_nodes_ix(nodes_by_element, i)\n",
     "        i1, i2 = nodes_ix[1], nodes_ix[2]\n",
@@ -181,10 +185,8 @@
     "        \n",
     "        if method == \"linear\"\n",
     "            aux = right_hand_side(fun, ϕ, total_nodes, h)[i]\n",
-    "        elseif method == \"quad\"\n",
+    "        else \n",
     "            aux = right_hand_side(fun, ϕ, total_nodes, h, nodes_by_element)[i1:i2]\n",
-    "        else\n",
-    "            error(\"Invalid method. Either linear or quad, instead got $method\")\n",
     "        end\n",
     "\n",
     "        F[i1:i2] = F[i1:i2] .+ aux\n",
@@ -208,8 +210,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "961e3a14",
+   "execution_count": 86,
+   "id": "fb593e1e",
    "metadata": {
     "scrolled": true
    },
@@ -218,10 +220,10 @@
      "data": {
       "text/plain": [
        "1×2 Matrix{Function}:\n",
-       " #255  #257"
+       " #379  #381"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,8 +240,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "1709fd87",
+   "execution_count": 87,
+   "id": "d40f256a",
    "metadata": {
     "scrolled": false
    },
@@ -882,7 +884,7 @@
        }
       },
       "text/html": [
-       "    <div id=\"68357432-92a1-45ba-9253-b0b9626feef1\" style=\"width:600px;height:400px;\"></div>\n",
+       "    <div id=\"35e23276-310c-4ea4-8930-94429c9496a0\" style=\"width:600px;height:400px;\"></div>\n",
        "    <script>\n",
        "        requirejs.config({\n",
        "        paths: {\n",
@@ -891,7 +893,7 @@
        "    });\n",
        "    require(['Plotly'], function (Plotly) {\n",
        "\n",
-       "        var PLOT = document.getElementById('68357432-92a1-45ba-9253-b0b9626feef1');\n",
+       "        var PLOT = document.getElementById('35e23276-310c-4ea4-8930-94429c9496a0');\n",
        "    Plotly.plot(PLOT, [\n",
        "    {\n",
        "        \"xaxis\": \"x\",\n",
@@ -1531,7 +1533,7 @@
        "    </script>\n"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1564,7 +1566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f43fc08",
+   "id": "23a62d89",
    "metadata": {},
    "source": [
     "# quad"
@@ -1572,18 +1574,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "fe8e2253",
+   "execution_count": 88,
+   "id": "77d24594",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "1×3 Matrix{Function}:\n",
-       " #273  #275  #277"
+       " #397  #399  #401"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1603,43 +1605,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "c67f6062",
+   "execution_count": 90,
+   "id": "c76a5c64",
    "metadata": {},
    "outputs": [
     {
      "ename": "LoadError",
-     "evalue": "DimensionMismatch(\"dimensions must match: a has dims (Base.OneTo(2), Base.OneTo(2)), b has dims (Base.OneTo(3), Base.OneTo(3)), mismatch at 1\")",
+     "evalue": "AssertionError: method in [\"linear\", \"quad\"]",
      "output_type": "error",
      "traceback": [
-      "DimensionMismatch(\"dimensions must match: a has dims (Base.OneTo(2), Base.OneTo(2)), b has dims (Base.OneTo(3), Base.OneTo(3)), mismatch at 1\")",
+      "AssertionError: method in [\"linear\", \"quad\"]",
       "",
       "Stacktrace:",
-      " [1] promote_shape",
-      "   @ ./indices.jl:178 [inlined]",
-      " [2] promote_shape(a::Matrix{Float64}, b::Matrix{Float64})",
-      "   @ Base ./indices.jl:169",
-      " [3] +(A::Matrix{Float64}, Bs::Matrix{Float64})",
-      "   @ Base ./arraymath.jl:45",
-      " [4] finite_elements(nelem::Int64, fun::Function, ϕ::Matrix{Function}, ϕ_prime::Matrix{Function}; method::String)",
-      "   @ Main ./In[63]:19",
-      " [5] top-level scope",
-      "   @ In[67]:1",
-      " [6] eval",
+      " [1] finite_elements(nelem::Int64, fun::Function, ϕ::Matrix{Function}, ϕ_prime::Matrix{Function}; method::String)",
+      "   @ Main ./In[85]:2",
+      " [2] top-level scope",
+      "   @ In[90]:1",
+      " [3] eval",
       "   @ ./boot.jl:360 [inlined]",
-      " [7] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
       "   @ Base ./loading.jl:1116"
      ]
     }
    ],
    "source": [
-    "_u = finite_elements(UNAA_COSA, x->1, quad_ϕ, quad_ϕ_prime; method=\"quad\")"
+    "_u = finite_elements(UNAA_COSA, x->1, quad_ϕ, quad_ϕ_prime; method=\"tubviej\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "057a602b",
+   "id": "73cddfbf",
    "metadata": {},
    "outputs": [],
    "source": []
