quad aux factor2 xd

--- a/entregas/tp4_finite_elements.ipynb
+++ b/entregas/tp4_finite_elements.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "c3cccd09",
    "metadata": {
     "scrolled": true
@@ -150,7 +150,7 @@
        "finite_elements (generic function with 1 method)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,13 +198,13 @@
     "    global_matrix[end, 1:end-1] .= 0\n",
     "    global_matrix[end, end] = 1\n",
     "\n",
-    "    return (global_matrix \\ F) .* h * aux\n",
+    "    return (global_matrix \\ F) .* h ./ aux\n",
     "end"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1effd46c",
+   "id": "b69a3b70",
    "metadata": {},
    "source": [
     "## Elementos lineales"
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "e0650024",
    "metadata": {
     "scrolled": true
@@ -222,10 +222,10 @@
      "data": {
       "text/plain": [
        "1×2 Matrix{Function}:\n",
-       " #9  #11"
+       " #48  #50"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "4946d741",
    "metadata": {
     "scrolled": false
@@ -870,7 +870,7 @@
        }
       },
       "text/html": [
-       "    <div id=\"17e6b908-a0cb-47eb-b093-1259bd3086be\" style=\"width:888px;height:555px;\"></div>\n",
+       "    <div id=\"2d6a098f-086f-4db4-b63c-e51d10839be9\" style=\"width:888px;height:555px;\"></div>\n",
        "    <script>\n",
        "        requirejs.config({\n",
        "        paths: {\n",
@@ -879,7 +879,7 @@
        "    });\n",
        "    require(['Plotly'], function (Plotly) {\n",
        "\n",
-       "        var PLOT = document.getElementById('17e6b908-a0cb-47eb-b093-1259bd3086be');\n",
+       "        var PLOT = document.getElementById('2d6a098f-086f-4db4-b63c-e51d10839be9');\n",
        "    Plotly.plot(PLOT, [\n",
        "    {\n",
        "        \"xaxis\": \"x\",\n",
@@ -1503,7 +1503,7 @@
        "    </script>\n"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1531,8 +1531,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "43d5f40e",
+   "execution_count": 18,
+   "id": "27f6ec32",
    "metadata": {
     "scrolled": false
    },
@@ -2159,7 +2159,7 @@
        }
       },
       "text/html": [
-       "    <div id=\"1d246ab1-80a9-443f-9c1c-0a9eaa2401b4\" style=\"width:888px;height:555px;\"></div>\n",
+       "    <div id=\"dd573c84-01cb-407a-b7a5-867404c1bf3d\" style=\"width:888px;height:555px;\"></div>\n",
        "    <script>\n",
        "        requirejs.config({\n",
        "        paths: {\n",
@@ -2168,7 +2168,7 @@
        "    });\n",
        "    require(['Plotly'], function (Plotly) {\n",
        "\n",
-       "        var PLOT = document.getElementById('1d246ab1-80a9-443f-9c1c-0a9eaa2401b4');\n",
+       "        var PLOT = document.getElementById('dd573c84-01cb-407a-b7a5-867404c1bf3d');\n",
        "    Plotly.plot(PLOT, [\n",
        "    {\n",
        "        \"xaxis\": \"x\",\n",
@@ -2792,7 +2792,7 @@
        "    </script>\n"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2809,8 +2809,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "db245b53",
+   "execution_count": 19,
+   "id": "9243873f",
    "metadata": {
     "scrolled": false
    },
@@ -3433,7 +3433,7 @@
        }
       },
       "text/html": [
-       "    <div id=\"fade84ca-8c21-44b5-bdc4-f8e2ab1f51b7\" style=\"width:888px;height:555px;\"></div>\n",
+       "    <div id=\"e1319a77-4ad0-4a76-afa8-7f36f55edca4\" style=\"width:888px;height:555px;\"></div>\n",
        "    <script>\n",
        "        requirejs.config({\n",
        "        paths: {\n",
@@ -3442,7 +3442,7 @@
        "    });\n",
        "    require(['Plotly'], function (Plotly) {\n",
        "\n",
-       "        var PLOT = document.getElementById('fade84ca-8c21-44b5-bdc4-f8e2ab1f51b7');\n",
+       "        var PLOT = document.getElementById('e1319a77-4ad0-4a76-afa8-7f36f55edca4');\n",
        "    Plotly.plot(PLOT, [\n",
        "    {\n",
        "        \"xaxis\": \"x\",\n",
@@ -4062,7 +4062,7 @@
        "    </script>\n"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4087,7 +4087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "0c778e6b",
    "metadata": {},
    "outputs": [
@@ -4095,10 +4095,10 @@
      "data": {
       "text/plain": [
        "1×3 Matrix{Function}:\n",
-       " #61  #63  #65"
+       " #70  #72  #74"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4118,7 +4118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "fd60fb37",
    "metadata": {},
    "outputs": [
@@ -4744,7 +4744,7 @@
        }
       },
       "text/html": [
-       "    <div id=\"687f4038-41f6-46ab-bd42-6f7dd84e4643\" style=\"width:888px;height:555px;\"></div>\n",
+       "    <div id=\"75b7977b-f64d-4719-9ec2-fe8221e5e4c2\" style=\"width:888px;height:555px;\"></div>\n",
        "    <script>\n",
        "        requirejs.config({\n",
        "        paths: {\n",
@@ -4753,7 +4753,7 @@
        "    });\n",
        "    require(['Plotly'], function (Plotly) {\n",
        "\n",
-       "        var PLOT = document.getElementById('687f4038-41f6-46ab-bd42-6f7dd84e4643');\n",
+       "        var PLOT = document.getElementById('75b7977b-f64d-4719-9ec2-fe8221e5e4c2');\n",
        "    Plotly.plot(PLOT, [\n",
        "    {\n",
        "        \"xaxis\": \"x\",\n",
@@ -5377,7 +5377,7 @@
        "    </script>\n"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5400,8 +5400,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "baabca80",
+   "execution_count": 22,
+   "id": "e614a5f7",
    "metadata": {},
    "outputs": [
     {
@@ -6026,7 +6026,7 @@
        }
       },
       "text/html": [
-       "    <div id=\"19a89be0-322e-4c08-9ff4-b53ebbf791ea\" style=\"width:888px;height:555px;\"></div>\n",
+       "    <div id=\"dae29269-9dbd-4c67-b4dc-b6f2571df6c5\" style=\"width:888px;height:555px;\"></div>\n",
        "    <script>\n",
        "        requirejs.config({\n",
        "        paths: {\n",
@@ -6035,7 +6035,7 @@
        "    });\n",
        "    require(['Plotly'], function (Plotly) {\n",
        "\n",
-       "        var PLOT = document.getElementById('19a89be0-322e-4c08-9ff4-b53ebbf791ea');\n",
+       "        var PLOT = document.getElementById('dae29269-9dbd-4c67-b4dc-b6f2571df6c5');\n",
        "    Plotly.plot(PLOT, [\n",
        "    {\n",
        "        \"xaxis\": \"x\",\n",
@@ -6659,7 +6659,7 @@
        "    </script>\n"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6683,8 +6683,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "ad45d119",
+   "execution_count": 23,
+   "id": "0772f855",
    "metadata": {},
    "outputs": [
     {
@@ -7305,7 +7305,7 @@
        }
       },
       "text/html": [
-       "    <div id=\"f82163b0-ae3f-4953-b26d-c099283a825d\" style=\"width:888px;height:555px;\"></div>\n",
+       "    <div id=\"b171b767-685e-4807-914f-f9fe78026744\" style=\"width:888px;height:555px;\"></div>\n",
        "    <script>\n",
        "        requirejs.config({\n",
        "        paths: {\n",
@@ -7314,7 +7314,7 @@
        "    });\n",
        "    require(['Plotly'], function (Plotly) {\n",
        "\n",
-       "        var PLOT = document.getElementById('f82163b0-ae3f-4953-b26d-c099283a825d');\n",
+       "        var PLOT = document.getElementById('b171b767-685e-4807-914f-f9fe78026744');\n",
        "    Plotly.plot(PLOT, [\n",
        "    {\n",
        "        \"xaxis\": \"x\",\n",
@@ -7934,7 +7934,7 @@
        "    </script>\n"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7955,14 +7955,6 @@
     "plot(sol_domain, exact_solution_3.(sol_domain), labels=\"Exact solution\")\n",
     "plot!(result_domain, _u, seriestype = :scatter, labels=\"Approximation\", size=(888, 555))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "698291a9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
