--- a/entregas/tp5_2d_finite_elements.ipynb
+++ b/entregas/tp5_2d_finite_elements.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "95eeb059",
    "metadata": {},
    "outputs": [
@@ -116,13 +116,13 @@
        "f (generic function with 1 method)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "_, ∇ϕ, nodes, weights = lagrange_basis()\n",
+    "ϕ, ∇ϕ, nodes, weights = lagrange_basis()\n",
     "f(x, y) = x^2 + x*y + y^2"
    ]
   },
@@ -177,8 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "31857aea",
+   "execution_count": 8,
+   "id": "231d5e21",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "get_local_matrix (generic function with 1 method)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,32 +208,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "6bf4984b",
+   "execution_count": 25,
+   "id": "26fbd317",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3×3 Matrix{Float64}:\n",
-       "  1.0  -0.5  -0.5\n",
-       " -0.5   0.5   0.0\n",
-       " -0.5   0.0   0.5"
+       "solve_poisson_dirichlet (generic function with 1 method)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_local_matrix(∇ϕ)"
+    "function solve_poisson_dirichlet(fun, p, simplices, border)\n",
+    "    rv = zeros(length(p))\n",
+    "    for element ∈ eachrow(simplices)\n",
+    "        v₁ = p[element[1], :]\n",
+    "        v₂ = p[element[2], :]\n",
+    "        v₃ = p[element[3], :]\n",
+    "        jacobian = abs(det([v₂-v₁ v₃-v₁]))\n",
+    "        rhs_fun_1(xy) = fun(element_affine_map.(xy, v₁=v₁, v₂=v₂, v₃=v₃)) * ϕ[1](xy[1], xy[2])\n",
+    "        rhs_fun_2(xy) = fun(element_affine_map.(xy, v₁=v₁, v₂=v₂, v₃=v₃)) * ϕ[2](xy[1], xy[2])\n",
+    "        rhs_fun_3(xy) = fun(element_affine_map.(xy, v₁=v₁, v₂=v₂, v₃=v₃)) * ϕ[3](xy[1], xy[2])\n",
+    "        rv[element[1]] += quadrature(rhs_fun_1, nodes, weights) * jacobian\n",
+    "        rv[element[2]] += quadrature(rhs_fun_2, nodes, weights) * jacobian\n",
+    "        rv[element[3]] += quadrature(rhs_fun_3, nodes, weights) * jacobian\n",
+    "    end\n",
+    "    return rhs_vector\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "24186e6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1×4 Matrix{Int64}:\n",
+       " 1  2  3  4"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P = [0 0; 0 1; 1 1; 1 0; 1/2 1/2]\n",
+    "Simplices = [1 5 4; 5 3 4; 5 2 3; 1 5 2]\n",
+    "Bd = [1 2 3 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "3b39686a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "MethodError: no method matching (::var\"#rhs_fun_1#32\"{var\"#35#36\", Vector{Float64}, Vector{Float64}, Vector{Float64}})(::Float64, ::Float64)\n\u001b[0mClosest candidates are:\n\u001b[0m  (::var\"#rhs_fun_1#32\")(::Any) at In[25]:8",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching (::var\"#rhs_fun_1#32\"{var\"#35#36\", Vector{Float64}, Vector{Float64}, Vector{Float64}})(::Float64, ::Float64)\n\u001b[0mClosest candidates are:\n\u001b[0m  (::var\"#rhs_fun_1#32\")(::Any) at In[25]:8",
+      "",
+      "Stacktrace:",
+      " [1] quadrature(fun::var\"#rhs_fun_1#32\"{var\"#35#36\", Vector{Float64}, Vector{Float64}, Vector{Float64}}, nodes::Tuple{Vector{Float64}, Vector{Float64}, Vector{Float64}}, weights::Tuple{Float64, Float64, Float64})",
+      "   @ Main ./In[3]:4",
+      " [2] solve_poisson_dirichlet(fun::var\"#35#36\", p::Matrix{Float64}, simplices::Matrix{Int64}, border::Matrix{Int64})",
+      "   @ Main ./In[25]:11",
+      " [3] top-level scope",
+      "   @ In[27]:1",
+      " [4] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [5] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1116"
+     ]
+    }
+   ],
+   "source": [
+    "solve_poisson_dirichlet(x->1, P, Simplices, Bd)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c97ed653",
+   "id": "77eff878",
    "metadata": {},
    "outputs": [],
    "source": []
